<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/iv_ciudad1"
        android:layout_width="342dp"
        android:layout_height="226dp"
        android:contentDescription="@string/imagen1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.536"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_pregunta"
        app:layout_constraintVertical_bias="0.064"
        app:srcCompat="@drawable/madrid" />

    <Button
        android:id="@+id/bt_B"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/p1_londres"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/bt_C"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/bt_A"
        app:layout_constraintTop_toBottomOf="@+id/iv_ciudad1"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_pregunta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pregunta1"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.111" />

    <Button
        android:id="@+id/bt_A"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/p1_madrid"
        app:layout_constraintBottom_toBottomOf="@+id/bt_B"
        app:layout_constraintEnd_toStartOf="@+id/bt_B"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bt_B" />

    <Button
        android:id="@+id/bt_C"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/p1_paris"
        app:layout_constraintBottom_toBottomOf="@+id/bt_B"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/bt_B"
        app:layout_constraintTop_toTopOf="@+id/bt_B" />

    <Button
        android:id="@+id/bt_siguiente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_siguiente"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_B"
        app:layout_constraintVertical_bias="0.269" />

    <Button
        android:id="@+id/bt_ayuda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/bt_ayuda"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.947"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/bt_pista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/botonPista"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

</androidx.constraintlayout.widget.ConstraintLayout>